# twitter-b2bit

./: README.md  db.sqlite3  manage.py  pyproject.toml
backendTwitter/: asgi.py  settings.py  urls.py  wsgi.py
