[tool.poetry]
name = "twitter-b2bit"
version = "0.1.0"
description = ""
authors = ["marcioemmanuel <marcio_emmanuel4@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
0 = "^0.0.0"
factory-boy = "^3.3.1"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
